# tree-of-life

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  package-lock.json
backend/: Dockerfile  README.md  alembic.ps1  alembic.sh  load_env.ps1  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 24e75e3f8179_added_question_group_table.py  2fe8a075c6ae_questiontag_question_tag.py  3ef6b03c7480_some_restructuring.py  a34750c0fe46_adding_title_column_to_question_tbl.py  a87635a2e399_initial_migration.py  a8afb6d0af19_updated_the_question_models.py  ad40bb1f54aa_adding_two_columns_to_timetable_table.py  c7139ce10db8_moved_questiontag_model.py  cf7065fef486_user_timetables_datetime_date.py  e3715fa9faa4_user_timetables_fixed_is_submitted_to_.py  eaac9cfaea71_user_answers_removed_date_of_plan_column.py
backend/scripts/: init_db.py  seed_data.yaml
backend/src/backend/: config.py  gunicorn_config.py  main.py
backend/src/backend/db/: __init__.py
backend/src/backend/db/models/: question.py  tag.py  user.py  user_answer.py  user_question.py  user_question_set.py
backend/src/backend/enums/: question.py  user.py
backend/src/backend/models/: user.py
backend/src/backend/routes/: __init__.py  auth.py  question.py  user_answer.py  user_question.py
backend/src/backend/schemas/: __init__.py  question.py  user.py  user_answer.py  user_question.py
backend/src/backend/services/: auth_dependencies.py  auth_user_manager.py  user.py  user_answer.py  user_question.py
(+70 files in other folders)
